--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Prajwal P Shetty</title>
+    <title>Suraksha</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -88,10 +88,10 @@
             <div class="column large-full">
 
                 <h1>
-                    Hello, I'm Prajwal, <br>
+                    Hello, I'm Suraksha, <br>
                     a frontend developer <br>
                     & designer currently <br>
-                    based in Udupi.
+                    based in Kundapura.
                 </h1>
 
                 <ul class="hero-social">
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="profile-pic" data-aos="fade-up">
-                        <img src="images/p2.jpeg" srcset="images/p2.jpeg 1x, images/p2.jpeg 2x" alt="">
+                        <img src="images/sura.jpeg" srcset="images/sura.jpeg 1x, images/sura.jpeg 2x" alt="">
                     </div>
 
                     <h3 data-aos="fade-up">Profile</h3>
@@ -189,8 +189,8 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co"> Mahatma Gandhi Memorial College PUC-PCMB </span>
-                                <span class="position__pos">PUC-PCMB</span>
+                                <span class="position__co"> St.mary's pu college kundapur </span>
+                                <span class="position__pos">PUC-PCMC</span>
                             </h6>
                             <div class="position__timeframe">
                                 June 2016 - March 2018
@@ -198,9 +198,8 @@
                         </div>
 
                         <p>
-                            Udupi-Manipal Highway,
-                            Kunjibettu,
-                            Udupi-576102,
+                            Church Road,
+                            Kundapur-576201,
                             Karnataka
                         </p>
                     </div>
@@ -500,7 +499,7 @@
                             accordingly.
                         </p>
                         <div class="testimonial-slider__author">
-                            <img src="images/stevejobs.webp" Author image" class="testimonial-slider__avatar">
+                            <img src="images/p2.jpeg" Author image" class="testimonial-slider__avatar">
                             <cite class="testimonial-slider__cite">
                                 <strong>Steve Jobs</strong>
                                 <span>Former CEO, Apple</span>
@@ -599,7 +598,7 @@
                             Email
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="mailto:#0">prajwalSheety@gmail.com</a>
+                            <a href="mailto:#0">suraksha@gmail.com</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <div class="footer-contact-block" data-aos="fade-up">
@@ -607,7 +606,7 @@
                             Phone
                         </h5>
                         <p class="footer-contact-block__content">
-                            <a href="tel:+1975432345">+91 73384 95886</a>
+                            <a href="tel:+1975432345">91 99805 53664</a>
                         </p>
                     </div> <!-- end footer-contact-block -->
                     <br>
@@ -628,8 +627,8 @@
 
         <div class="row s-footer__bottom">
             <div class="column large-full ss-copyright">
-                <span>© Copyright Prajwal 2021</span>
-                <span>Design by <a href="https://www.styleshout.com/">Thirumala</a></span>
+                <span>© Copyright Suraksha 2021</span>
+                <span>Design by <a href="https://www.styleshout.com/">Prajwal</a></span>
             </div> <!-- end ss-copyright -->
 
             <div class="ss-go-top">
