--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
                     <div class="testimonial-slider__slide">
                         <p>
-                            Working with prajwal and his team was a pleasant experience. Two things in particular about
+                            Working with suraksha and his team was a pleasant experience. Two things in particular about
                             their service is exceptional: their speed of response to emails, they were always available
                             to answer my questions and provide feedback as the project went along. Secondly they
                             demonstrated a clear understanding of the scope and nature of the project and delivered
@@ -509,7 +509,7 @@
 
                     <div class="testimonial-slider__slide">
                         <p>
-                            I assigned prajwal to a redesigning job of my existing site. They left no loophole exposed
+                            I assigned suraksha to a redesigning job of my existing site. They left no loophole exposed
                             in their redesigning work and created a fresh, eye-tempting design for my site. Really, the
                             new design is very user-friendly and responsive as well! Looking forward to hire them again
                             to design my next upcoming site.
@@ -525,9 +525,11 @@
 
                     <div class="testimonial-slider__slide">
                         <p>
-                            We came into contact with prajwal for Just Ryde app. It is an on-demand taxi booking that we
+                            We came into contact with suraksha for Just Ryde app. It is an on-demand taxi booking that
+                            we
                             developed with an aim to provide passengers with more security features and more chances to
-                            earn for drivers. prajwal team listened to our requirements and develop the app according to
+                            earn for drivers. suraksha team listened to our requirements and develop the app according
+                            to
                             them. In the end, they delivered what we were expecting them from us. They did a fantastic
                             job and handed us a solution that meets our expectations. We would highly recommend them for
                             their amazing services.
@@ -587,7 +589,7 @@
                 </div>
 
                 <div class="footer-email-us">
-                    <a href="mailto:prajwalShetty@gmail.com" class="btn btn--primary h-full-width">Let's Talk</a>
+                    <a href="mailto:surakshaShetty@gmail.com" class="btn btn--primary h-full-width">Let's Talk</a>
                 </div>
             </div>
 
@@ -628,7 +630,7 @@
         <div class="row s-footer__bottom">
             <div class="column large-full ss-copyright">
                 <span>© Copyright Suraksha 2021</span>
-                <span>Design by <a href="https://www.styleshout.com/">Prajwal</a></span>
+                <span>Design by <a href="https://www.styleshout.com/">suraksha</a></span>
             </div> <!-- end ss-copyright -->
 
             <div class="ss-go-top">
